fix Fab button location on mobile
and do not show it when adding or editing it

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -62,10 +62,12 @@ $height-top-xs: 109px;
 .fab {
   bottom: 40px;
   background-color: red !important;
-  position: absolute !important;
+  position: fixed !important;
   right: 100px;
+  z-index: 100;
+
   @media all and (max-width: 768px) {
-    right: 60px;
+    right: 20px;
   }
 }
 
